--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -19,6 +19,11 @@
             </div>
             <div class="content-left">
                 <div class="containers">
+                <?php if($error) {?>
+                    <div class="error">
+                        <?=$error_reason?>
+                    </div>
+                <? } ?>
                 <div class="row space">
                     <div class="headline">
                         <h2>Get from Instagram</h2> <hr>
