1 version que funciona

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -33,9 +33,9 @@
                                     <a href="logout">Logout</a>  
                          <?php }  ?>
                     </div>
-                <?php if($error) {?>
+                <?php if($error || $results['is_error'] == true) {?>
                         <div class="alert alert-danger">
-                          <strong><?=$error_type?></strong><?=$error_reason?>
+                          <strong><?=$error_type?><?=$results['meta']['error_type']?></strong><?=$error_reason?><?=$results['meta']['error_message']?>
                         </div>
                 <? } ?>
                 <div class="row space">
@@ -71,7 +71,7 @@
                     </form>
                     <div class="row">
                         <div class="media">
-                            <?php if(!empty($results['data'])){ foreach($results['data'] as $media) { ?>
+                            <?php if($results) {if(!empty($results['data'])){ foreach($results['data'] as $media) { ?>
                                 <div class="media-item">
                                     <div class="photo"><img src="<?=$media['images']['low_resolution']['url']?>" alt="" /></div>
 	
@@ -83,7 +83,7 @@
                             <div class="alert alert-warning" style="width: 100%;">
                                  <strong>No Data</strong> results, try using another tag.
                             </div>
-                            <? } ?>
+                            <? } } ?>
                          </div>
                     </div>
                                         <? } ?>
