--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,25 @@ body {
     font-weight: 400;
     line-height: 1.5;
     overflow-x: hidden;
+	background-image:url(../images/bg.jpg);
+	background-size:100% auto;
+	background-repeat:no-repeat;
+	background-position:left top;
+	background-attachment:fixed;
+}
+
+#cabecera{
+	width:100%;
+	height:auto;
+	padding:10px 2%;
+	margin:0;
+	position:absolute;
+	top:0;
+	left:0;
+	z-index:50;
+	background-color:#050505;
+	text-align:left;
+	border:none 0px;
 }
 .bg {
     margin: 0 auto;
@@ -54,12 +73,15 @@ body {
     right: 0;
 }
 .content-left {
-    margin-left: 30%;
-    padding: 2em 1em;
-    position: relative;
+    background: #fff none repeat scroll 0 0;
+    height: auto;
+    left: 50%;
+    margin-left: -35%;
+    padding: 2vw;
+    position: absolute;
     width: 70%;
-    height: 100%;
-    background: #fff;
+	top:85px;
+	box-shadow: 0 2px 10px 2px #555555;
 }
 hr {
     background-color: transparent;
@@ -67,9 +89,9 @@ hr {
     margin: 18px 0;
 }
 .containers {
-    margin: 0 auto 1.5em 0.8em;
+    margin: 0 auto;
     max-width: 90%;
-    padding: 0 1.25em;
+    padding: 0;
 }
 
 .media{
@@ -103,5 +125,36 @@ hr {
 
 .login {
     float: right;
-    padding: 10px;
+    padding: 15px;
+	text-align:right
+}
+.login h3{
+	margin:10px 0 10px;
+}
+
+.login a{
+	padding:7px 15px;
+	background-color:#693;
+	color:#fff;
+	font-weight:bold;
+	text-decoration:none;	
+	border-radius:18px;
+	transition:0.6s ease-in-out;
+	-webkit-transition: 0.6s ease-in-out;
+	-moz-transition: 0.6s ease-in-out;
+}
+.login a:hover{
+	background-color:#297C27;
+	padding:7px 30px;	
+}
+.form-control {
+    color: #555;
+    font-size: 18px;
+    height: 47px;
+    line-height: 1.42857;
+    padding: 11px 18px;
+    width: 100%;
+}
+label{
+    font-size: 15px;
 }
